/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Project/Maven2/JavaApp/src/main/java/${packagePath}/${mainClassName}.java to edit this template
 */
package com.mycompany.adressbook;

import java.util.regex.*;





/**
 *
 * @author 7roub
 */

public class AdressBook {
    
    

    public static void main(String[] args) {
        
     

     
    }

}
